--- a/src/Web/Views/Shared/_LayoutInsure.cshtml
+++ b/src/Web/Views/Shared/_LayoutInsure.cshtml
@@ -22,17 +22,8 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
-
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Users" asp-action="AllUsers">All users</a>
-                        </li>
-
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="AddProduct">Add Product</a>
-                        </li>
-
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Store">Store</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Store">Add Product</a>
                         </li>
                         
                     </ul>
