--- a/src/Web/Views/Home/Store.cshtml
+++ b/src/Web/Views/Home/Store.cshtml
@@ -21,7 +21,7 @@
                             <div class="item-image" style="background-image: url('@item.Image');"></div>
                         </div>
                         <div class="d-flex justify-content-between">
-                            <label class="text-muted" for="">Temperature</label>
+                            <label class="text-muted" for="">@((SensorType)item.ProductTypeId)</label>
                             <div class="">
                                 @for(int x = 0; x < 5; x++)
                                 {
