--- a/src/Web/Views/Projects/Project.cshtml
+++ b/src/Web/Views/Projects/Project.cshtml
@@ -21,15 +21,16 @@
               <a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="false">Profile</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" id="contact-tab" data-toggle="tab" href="#contact" role="tab" aria-controls="contact" aria-selected="false">Contact</a>
+              <a class="nav-link" id="contact-tab" data-toggle="tab" href="#contact" role="tab" aria-controls="contact" aria-selected="false">Issues</a>
             </li>
           </ul>
           <div class="tab-content" id="myTabContent">
             <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
-                @Html.Partial("_ProjectInfoPartial", new PartialModel() { Id = @Model.Project.Id })
+                @{ bool ro = User.Identity.Name != Model.Project.OwnerEmail; }
+                @Html.Partial("_ProjectInfoPartial", new PartialModel() { Id = @Model.Project.Id, ReadOnly = ro })
             </div>
             <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
-                @Html.Partial("_UsersListPartial", new PartialModel() { Id = @Model.Project.Id, ReadOnly = false })
+                @Html.Partial("_UsersListPartial", new PartialModel() { Id = @Model.Project.Id, ReadOnly = ro })
             </div>
             <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">
                 @Html.Partial("_IssuesPartial", new PartialModel() { Id = -1, ReadOnly = false })
@@ -57,23 +58,32 @@
             <span aria-hidden="true">&times;</span>
           </button>
         </div>
-        <div id="modal" class="modal-body">
-          <label for="">Name of sensor:</label>
-          <input id='sensorname' class="form-control" type="">
-          <label for="">Lower value:</label>
-          <input required id='lowervalue' class="form-control" onchange="setmin()" type="number">
-          <label for="">Upper value:</label>
-          <input required id='uppervalue' class="form-control" type="number" min="0">
-          <label for="">Product</label>
-          <select id="productId" id="">
-            @foreach(var p in Model.Products)
-            {
-              <option value="@p.Id">
-                @p.Name
-              </option>
-            }
-          </select>
-        </div>
+        @if(Model.Project.OwnerEmail == User.Identity.Name)
+        {
+          <div id="modal" class="modal-body">
+            <label for="">Name of sensor:</label>
+            <input required id='sensornam' class="form-control" type="text">
+            <label for="">Lower value:</label>
+            <input required id='lowervalue' class="form-control" onchange="setmin()" type="number">
+            <label for="">Upper value:</label>
+            <input required id='uppervalue' class="form-control" type="number" min="0">
+            <label for="">Product</label>
+            <select id="productId" id="">
+              @foreach(var p in Model.Products)
+              {
+                <option value="@p.Id">
+                  @p.Name
+                </option>
+              }
+            </select>
+          </div>
+        }
+        else
+        {
+          <div id="modal" class="modal-body">
+            You don't have permission to do this.
+          </div>
+        }
         <script>
           function setmin()
           {
@@ -83,7 +93,10 @@
         </script>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-          <button onclick="addSensor()" type="submit" class="btn btn-primary" data-dismiss="modal">Save changes</button>
+          @if(Model.Project.OwnerEmail == User.Identity.Name)
+          {
+            <button onclick="addSensor()" type="submit" class="btn btn-primary" data-dismiss="modal">Save changes</button>
+          }
         </div>
       </div>
     </div>
@@ -93,9 +106,12 @@
 <script>
   var content 
   function addSensor() {
-    var name = document.getElementById('sensorname').value
+    var name = document.getElementById('sensornam').value
+    document.getElementById('sensornam').value = ''
     var upperValue = document.getElementById('uppervalue').value
+    document.getElementById('uppervalue').value = ''
     var lowerValue = document.getElementById('lowervalue').value
+    document.getElementById('lowervalue').value = ''
     var productId = document.getElementById('productId').value
     $.ajax(
     {
