--- a/src/Web/Views/Shared/_BlueprintPartial.cshtml
+++ b/src/Web/Views/Shared/_BlueprintPartial.cshtml
@@ -39,23 +39,13 @@
         </table>
         <canvas id="myChart">
     </div>
-    <div style="width: 500px; height: 400px; overflow: scroll;">
-        <table class="table table-hover table-bordered">
-            <thead>
-                <td>Name</td>
-                <td>Value</td>
-            </thead>
-            <tbody id='tbl'>
-
-            </tbody>
-        </table>
-    </div>
     
 
     <script>
         
         
         function addToIssue() {
+            console.log(mySensor)
             addSensorToIssue( { id: mySensor.id, name: mySensor.name } )
         }
     </script>
