--- a/src/Web/Views/Shared/_UsersListPartial.cshtml
+++ b/src/Web/Views/Shared/_UsersListPartial.cshtml
@@ -56,6 +56,7 @@
         success: function (response) {
             getUsersList(@Model.Id)
             $("#message").html(response.message)
+            document.getElementById('adduser').value = ''
         }
         }
         )
@@ -77,18 +78,12 @@
                 r.push('<div class="user-list-element">')        
                 r.push(response.users[key].userName)
                 r.push('</div>')
-                r.push('<div class="divider-vertical"></div>')
-                r.push('<div class="user-list-element">')
-                r.push(response.users[key].email)
-                r.push('</div>')
-                r.push('<div class="divider-vertical"></div>')
-                r.push('<div class="user-list-element">')
-                r.push(response.users[key].email)
-                r.push('</div>')
-                r.push('<div class="divider-vertical"></div>')
-                r.push('<div class="user-list-element" onclick="deleteUser(\'' + response.users[key].email + '\')">')
-                r.push('✖')  
-                r.push('</div>')
+                if(response.users[key].email != '@User.Identity.Name' && '@Model.ReadOnly' == 'true')
+                {
+                    r.push('<div class="user-list-element" onclick="deleteUser(\'' + response.users[key].email + '\')">')
+                    r.push('✖')  
+                    r.push('</div>')
+                }
                 r.push('</div>')
                 }
                 console.log(r)
