--- a/src/Web/Views/Shared/_BlueprintPartial.cshtml
+++ b/src/Web/Views/Shared/_BlueprintPartial.cshtml
@@ -29,6 +29,9 @@
             <thead>
                 <tr>
                     <td>
+                        <label for="" id='sname'></label>
+                    </td>
+                    <td>
                         <label for="" id='sensorname'></label>
                     </td>
                     <td>
