--- a/src/Web/Views/Home/Index.cshtml
+++ b/src/Web/Views/Home/Index.cshtml
@@ -19,7 +19,7 @@
         else
         {
 
-            <h1 class="display-4">Welcome!</h1>
+            <h1 class="display-4">@Localizer["Welcome"]!</h1>
      
         }
     }
