--- a/src/Web/Views/_ViewImports.cshtml
+++ b/src/Web/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 ﻿@using Jineo
 @using Jineo.Models
+@using Microsoft.AspNetCore.Mvc.Localization
+@inject IViewLocalizer Localizer
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
